# R.Daggy

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/commands/: dagpi.rs  info.rs  meta.rs  mod.rs  moderation.rs  translation.rs
src/misc/: help.rs
src/utils/: client.rs  mod.rs  timeparser.rs  uptimer.rs
