# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "rdaggy"
version = "0.1.0"
authors = ["Daggy1234"]
edition = "2018"

# See more keys and their dfinitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.10.4", features = ["client", "gateway", "cache", "rustls_backend", "model","framework", "standard_framework", "unstable_discord_api"] }
serenity_utils = {  features = ["cache", "native_tls_backend"], version = "0.6.1" }
tokio = { version = "1.4.0", features = ["macros","signal", "fs", "rt-multi-thread", "time"] }
dotenv = "0.15"
prettytable-rs = "0.8.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tracing-futures = "0.2.5"
typemap = "0.3.3"
reqwest = {version="0.11.2",features=["json"]}
num-integer = "0.1.32"
time = {version="0.2.26", features=["std"]}
serde = "1.0.124"
uwuify = "0.1.0"
bottomify = {git="https://github.com/bottom-software-foundation/bottom-rs", branch="need_top"}

[dependencies.futures]
version = "0.3.13"
default-features = false
features = ["std"]

[dependencies.dagpirs]
version = "0.1.3"
default-features = true
features = ["serenity"]

[package.metadata.wharf.builder]
image = "rust"

[package.metadata.wharf.output]
image = "gcr.io/distroless/cc-debian10"
entrypoint = ["bot"]
stop-signal = "SIGINT"

[package.metadata.wharf.output.labels]
"simple-label" = "simple value"
"my.awesome.label" = "another value"

[[package.metadata.wharf.binary]]
name = "rdaggy"
destination = "/usr/local/bin/bot"
